# GT_ELEKTRONIK_v031_PARADISE

./: 00_ILK_OKU_BASTAN_KURULUM.txt  01_GT_PARADISE_FULL_PANEL_AC.cmd  02_GEREKIRSE_PYSERIAL_KUR.cmd  CMakeLists.txt  OKU_BENI.txt
02_UF2_HAZIR_YUKLE_BURAYA_GELECEK/: UF2_GITHUB_ACTIONS_SONRASI_BURAYA_GELECEK.txt
03_TALIMAT/: 01_SISTEM_NASIL_CALISIR.txt  02_GITHUB_UF2_BUILD.txt  03_UF2_YUKLEME.txt  04_BAGLANTI_LISTESI.txt
GITHUB_WORKFLOW_ELLE_EKLE/.github/workflows/: build_uf2.yml
PROGRAM/: gt_v030_paradise_pc_cal_test.py
firmware/controller/: keyboard_main.c  keyboard_usb_descriptors.c  tusb_config.h
firmware/mouse/: mouse_main.c  mouse_usb_descriptors.c
